Firebase for clientside is applied

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,15 +36,15 @@ nav ul {
 
 nav li {
   display: inline-block;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 nav a {
   text-decoration: none;
   color: black;
   font-weight: bold;
-  padding: 16px 32px;
+  padding: 24px 32px;
 }
 
 nav a:hover {
@@ -55,7 +55,7 @@ nav a:hover {
 #page-body {
   max-width: 700px;
   margin: auto;
-  padding-top: 64px;
+  padding-top: 72px;
 }
 
 .article-list-item {
@@ -78,7 +78,7 @@ nav a:hover {
   margin-bottom: 16px;
 }
 
-#add-comment-form input, textarea {
+input, textarea {
   display: block;
   width: 300px;
   padding: 8px;
@@ -89,6 +89,12 @@ nav a:hover {
   margin-bottom: 16px;
 }
 
+.error {
+  padding: 8px;
+  border-radius: 4px;
+  background-color: pink;
+}
+
 #add-comment-form button {
   width: 320px;
 }
@@ -96,10 +102,15 @@ nav a:hover {
 #upvotes-section button, p {
   display: inline-block;
   margin-right: 16px;
-  
 }
 
 .comment {
   border-bottom: 2px solid black;
   padding: 16px;
+}
+
+.nav-right {
+  position: absolute;
+  top: 8px;
+  right: 8px;
 }
